# ai-projects

LeadAgent/: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  DEPLOY.md  Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml  render.yaml
LeadAgent/.github/workflows/: ci.yml
LeadAgent/agent/: __init__.py  guardrails.py  loop.py  prompts.py  tools.py
LeadAgent/api/: __init__.py  main.py  middleware.py
LeadAgent/api/routes/: admin.py  chat.py
LeadAgent/checks/: check_retrieval.py  retrieval_questions.yaml
LeadAgent/config/: __init__.py
LeadAgent/db/: apply_migrations.py
LeadAgent/db/migrations/: 0001_extensions_and_chunks.sql  0002_scaffold_agent_tables.sql  0003_expand_traces.sql
LeadAgent/domain/: chunk.py  lead.py
LeadAgent/evals/: __init__.py  assertions.py  judge.py  runner.py
LeadAgent/evals/datasets/: 01_adversarial_groundedness.yaml  02_booking_correctness.yaml  03_escalation_correctness.yaml  04_lead_capture.yaml  05_tone_qualifying.yaml  06_adversarial_expanded.yaml  (+3 more)
LeadAgent/integrations/: __init__.py  calendar_adapter.py  crm_adapter.py  email_adapter.py
LeadAgent/observability/: __init__.py  logger.py
LeadAgent/rag/: chunker.py  crawler.py  embedder.py  retriever.py  store.py
LeadAgent/scripts/: chat.py  ingest.py  run_api.py  traces.py
LeadAgent/tests/: conftest.py  test_agent_loop.py  test_api.py  test_calendar.py  test_chunker.py  test_config.py  test_crawler.py  test_crm.py  test_evals.py  test_retriever.py  test_security.py  test_tools.py
LeadAgent/web/: demo.html  widget.js
(+5 files in other folders)
