[project]
name = "leadagent"
version = "0.1.0"
description = "AI inbound lead agent — grounded, observable, eval-first"
requires-python = ">=3.11"

dependencies = [
    # RAG pipeline (M1)
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "tiktoken>=0.7.0",
    "google-genai>=2.8.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    # Agent loop (M2+)
    "openai>=1.35.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres]>=4.7.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires a running postgres (testcontainers or local)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["domain*", "rag*", "agent*", "integrations*", "observability*", "evals*", "api*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
